--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import Sidebar from "../components/Sidebar.astro";
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -6,17 +10,23 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
+
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+	
+    	<script src="https://unpkg.com/@phosphor-icons/web"></script>
+
+		<link rel="stylesheet" href="/src/styles/global.css" />
 	</head>
 	<body>
-		<slot />
-	</body>
-</html>
+		<div class="app-container">
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
+			<Sidebar />
+			
+			<slot />
+
+		</div>
+	</body>
+
+	<script src="/src/scripts/main.js"></script>
+
+</html>
