--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,6 +44,6 @@ import LoginLayout from "@layouts/LoginLayout.astro";
     </form>
 
     <div class="auth-footer">
-        <p>¿No tienes una cuenta? <a href="/signUp">Crear Cuenta</a></p>
+        <p>¿No tienes una cuenta? <a href="/register">Crear Cuenta</a></p>
     </div>
 </LoginLayout>
